--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,13 @@
+aspose-cells==23.3.0
 et-xmlfile==1.1.0
+JPype1==1.4.1
 numpy==1.24.2
 openpyxl==3.1.2
+openpyxl-image-loader==1.0.5
+packaging==23.0
 pandas==1.5.3
+Pillow==9.4.0
 python-dateutil==2.8.2
 pytz==2022.7.1
+pywin32==305
 six==1.16.0
